--- a/Saved/Config/Windows/Engine.ini
+++ b/Saved/Config/Windows/Engine.ini
@@ -1,6 +1,6 @@
 [Core.System]
 Paths=../../../Engine/Content
-Paths=../../../../../../Users/Tim/Documents/Project1/Content
+Paths=../../../../../../Users/Tim/Documents/Unreal Projects/Project1/Content
 Paths=../../../Engine/Plugins/2D/Paper2D/Content
 Paths=../../../Engine/Plugins/Experimental/CharacterAI/Content
 
@@ -18,13 +18,5 @@ MulticastTimeToLive=1
 EnableTunnel=False
 TunnelUnicastEndpoint=
 TunnelMulticastEndpoint=
-
-[WindowsApplication.Accessibility]
-StickyKeysHotkey=False
-ToggleKeysHotkey=False
-FilterKeysHotkey=False
-StickyKeysConfirmation=False
-ToggleKeysConfirmation=False
-FilterKeysConfirmation=False
 
 
