Ähhmm kein plan

--- a/Saved/Config/Windows/EditorUserSettings.ini
+++ b/Saved/Config/Windows/EditorUserSettings.ini
@@ -65,6 +65,7 @@ ContentBrowserTab1.CurrentViewType=1
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -489,6 +490,86 @@ AnimSequence.Reimport=True
 AnimSequence.Thumbnail=True
 SkeletalMesh.SkeletalMesh=False
 Wohnhaus_C.Default=True
+FirstPersonCharacter_C.Animation=True
+FirstPersonCharacter_C.Mesh=True
+FirstPersonCharacter_C.Clothing=True
+FirstPersonCharacter_C.Lighting=True
+FirstPersonCharacter_C.Activation=True
+FirstPersonCharacter_C.Character Movement=True
+FirstPersonCharacter_C.Agent Physics=True
+FirstPersonCharacter_C.Avoidance=True
+FirstPersonCharacter_C.MovementComponent=True
+FirstPersonCharacter_C.Velocity=True
+SkeletalMeshActor.TransformCommon=True
+SkeletalMeshActor.Animation=True
+SkeletalMeshActor.Mesh=True
+SkeletalMeshActor.Materials=True
+SkeletalMeshActor.Clothing=True
+SkeletalMeshActor.Physics=True
+SkeletalMeshActor.Collision=True
+SkeletalMeshActor.Rendering=True
+SkeletalMeshActor.Lighting=True
+SkeletalMeshActor.PhysicsVolume=True
+SkeletalMeshActor.Tags=True
+SkeletalMeshActor.Activation=True
+SkeletalMeshActor.Input=True
+SkeletalMeshActor.Actor=True
+PhATSimOptions.Anim=True
+PhATSimOptions.Simulation=True
+PhATSimOptions.MouseSpring=True
+PhATSimOptions.Poking=True
+PhATSimOptions.Advanced=True
+PhATSimOptions.Drawing=True
+BodySetup.BodySetup=True
+BodySetup.Physics=True
+BodySetup.Collision=True
+NewAnimBlueprint_C.RootMotion=True
+AnimGraphNode_SequencePlayer.Settings=True
+REINST_FirstPersonCharacter_C_240.Variable=True
+REINST_FirstPersonCharacter_C_240.TransformCommon=True
+REINST_FirstPersonCharacter_C_240.Sockets=True
+REINST_FirstPersonCharacter_C_240.Animation=True
+REINST_FirstPersonCharacter_C_240.Mesh=True
+REINST_FirstPersonCharacter_C_240.Materials=True
+REINST_FirstPersonCharacter_C_240.Clothing=True
+REINST_FirstPersonCharacter_C_240.Physics=True
+REINST_FirstPersonCharacter_C_240.Collision=True
+REINST_FirstPersonCharacter_C_240.Rendering=True
+REINST_FirstPersonCharacter_C_240.Lighting=True
+REINST_FirstPersonCharacter_C_240.PhysicsVolume=True
+REINST_FirstPersonCharacter_C_240.Tags=True
+REINST_FirstPersonCharacter_C_240.Activation=True
+REINST_FirstPersonCharacter_C_240.Events=True
+FirstPersonCharacter_C.Materials=True
+REINST_FirstPersonCharacter_C_314.Variable=True
+REINST_FirstPersonCharacter_C_314.TransformCommon=True
+REINST_FirstPersonCharacter_C_314.Sockets=True
+REINST_FirstPersonCharacter_C_314.Animation=True
+REINST_FirstPersonCharacter_C_314.Mesh=True
+REINST_FirstPersonCharacter_C_314.Materials=True
+REINST_FirstPersonCharacter_C_314.Clothing=True
+REINST_FirstPersonCharacter_C_314.Physics=True
+REINST_FirstPersonCharacter_C_314.Collision=True
+REINST_FirstPersonCharacter_C_314.Rendering=True
+REINST_FirstPersonCharacter_C_314.Lighting=True
+REINST_FirstPersonCharacter_C_314.PhysicsVolume=True
+REINST_FirstPersonCharacter_C_314.Tags=True
+REINST_FirstPersonCharacter_C_314.Activation=True
+REINST_FirstPersonCharacter_C_314.Events=True
+Actor.TransformCommon=True
+Actor.Actor=True
+LightmassImportanceVolume.TransformCommon=True
+LightmassImportanceVolume.BrushSettings=True
+LightmassImportanceVolume.Actor=True
+REINST_FirstPersonCharacter_C_867.None=True
+REINST_FirstPersonCharacter_C_867.Tick=True
+REINST_FirstPersonCharacter_C_867.Character=True
+REINST_FirstPersonCharacter_C_867.Camera=True
+REINST_FirstPersonCharacter_C_867.Pawn=True
+REINST_FirstPersonCharacter_C_867.Rendering=True
+REINST_FirstPersonCharacter_C_867.Replication=True
+REINST_FirstPersonCharacter_C_867.Input=True
+REINST_FirstPersonCharacter_C_867.Actor=True
 
 [DetailCustomWidgetExpansion]
 InputSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,
@@ -514,17 +595,24 @@ LastLogListing=FBXImport
 /Game/FirstPersonBP/Blueprints/Bergwerk.Bergwerk=0
 /Game/FirstPersonBP/Blueprints/Wohnhaus.Wohnhaus=0
 /Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=0
+/Game/FirstPersonBP/Blueprints/Character3_Skeleton.Character3_Skeleton=0
+/Game/FirstPersonBP/Blueprints/Character3.Character3=0
+/Game/FirstPersonBP/Blueprints/Character3_Anim_Armature_Stehen_001.Character3_Anim_Armature_Stehen_001=0
+/Game/FirstPersonBP/Blueprints/Character3_Anim_Armature_Laufen.Character3_Anim_Armature_Laufen=0
 
 [/Script/UnrealEd.FbxAnimSequenceImportData]
 bImportCustomAttribute=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/FirstPersonBP/Blueprints/NadelBaum_BP.NadelBaum_BP;
+RecentlyPlaced=/Game/FirstPersonBP/Blueprints/LaubBaum_BP.LaubBaum_BP;
+RecentlyPlaced=/Game/FirstPersonBP/Blueprints/Character3.Character3;
+RecentlyPlaced=/Game/FirstPersonBP/Meshes/Hausnordisch2.Hausnordisch2;
+RecentlyPlaced=/Game/FirstPersonBP/Blueprints/Hausnordisch1.Hausnordisch1;
 RecentlyPlaced=/Game/FirstPersonBP/Blueprints/Bergwerk.Bergwerk;
 RecentlyPlaced=/Game/FirstPersonBP/Blueprints/Wohnhaus.Wohnhaus;
 RecentlyPlaced=/Game/FirstPersonBP/Meshes/Miene2.Miene2;
 RecentlyPlaced=/Game/FirstPersonBP/Meshes/Miene1.Miene1;
-RecentlyPlaced=/Game/FirstPersonBP/Blueprints/NadelBaum_BP.NadelBaum_BP;
-RecentlyPlaced=/Game/FirstPersonBP/Blueprints/LaubBaum_BP.LaubBaum_BP;
 RecentlyPlaced=/Game/FirstPersonBP/Blueprints/Baum.Baum;
 RecentlyPlaced=/Game/FirstPersonBP/Meshes/Laubbaum.Laubbaum;
 RecentlyPlaced=/Game/FirstPersonBP/Blueprints/Arbeiter.Arbeiter;
@@ -532,7 +620,7 @@ RecentlyPlaced=/Game/FirstPersonBP/Meshes/Cube.Cube;
 RecentlyPlaced=/Game/FirstPersonBP/Blueprints/Material.Material;
 
 [DetailPropertyExpansion]
-Brush=Object.BrushBuilder.BrushBuilder.Object.BrushSettings
+Brush=
 EditorLoadingSavingSettings=Object.AutoReimport" "Object.Blueprints" "Object.AutoSave
 Object=
 
@@ -585,7 +673,7 @@ NewLandscapeMaterialName=
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
-WindowSize=X=1330.000 Y=770.000
+WindowSize=X=1340.000 Y=780.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -603,7 +691,7 @@ UNR=../../../../../../Users/Tim/Documents/Unreal Projects/Project1/Content/First
 BRUSH=../../../../../../Users/Tim/Documents/Unreal Projects/Project1/Content/
 FBX=../../../../../../Users/Tim/Documents/Unreal Projects/Project1/Content/
 FBXAnim=../../../../../../Users/Tim/Documents/Unreal Projects/Project1/Content/
-GenericImport=../../../../../../Users/Tim/Documents/Unreal Projects/Sword/Zylindertest.fbx
+GenericImport=../../../../../../Users/Tim/Documents/Unreal Projects/Project1/Modelle/Character3.fbx
 GenericExport=../../../../../../Users/Tim/Documents/Unreal Projects/Project1/Content/
 GenericOpen=../../../../../../Users/Tim/Documents/Unreal Projects/Project1/Content/
 GenericSave=../../../../../../Users/Tim/Documents/Unreal Projects/Project1/Content/
@@ -971,6 +1059,8 @@ StaticMeshEditor.TimeStamp=2015.04.25-23.13.36
 StaticMeshEditor.LastCompileMethod=Unknown
 ExternalImagePicker.TimeStamp=2015.04.25-23.11.57
 ExternalImagePicker.LastCompileMethod=Unknown
+PhAT.TimeStamp=2015.04.25-23.13.07
+PhAT.LastCompileMethod=Unknown
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
