so ein paar sachen

--- a/Saved/Config/Windows/EditorLayout.ini
+++ b/Saved/Config/Windows/EditorLayout.ini
@@ -62,7 +62,7 @@ Blueprints_Unified_Components_v5=(\
 							"SizeCoefficient": 0.80000001192092896,\
 							"Type": "Stack",\
 							"HideTabWell": false,\
-							"ForegroundTab": "SCSViewport",\
+							"ForegroundTab": "Document : 1",\
 							"Tabs": [\
 								(\
 									"TabId": "SCSViewport",\
@@ -112,45 +112,7 @@ Blueprints_Unified_Components_v5=(\
 		)\
 	]\
 )
-Standalone_BlueprintDefaults_Layout_v6=(\
-	"Type": "Layout",\
-	"Name": "Standalone_BlueprintDefaults_Layout_v6",\
-	"PrimaryAreaIndex": 0,\
-	"Areas": [\
-		(\
-			"SizeCoefficient": 1,\
-			"Type": "Area",\
-			"Orientation": "Orient_Vertical",\
-			"WindowPlacement": "Placement_NoWindow",\
-			"Nodes": [\
-				(\
-					"SizeCoefficient": 0.20000000298023224,\
-					"Type": "Stack",\
-					"HideTabWell": true,\
-					"ForegroundTab": "AssetEditorToolkit_Toolbar",\
-					"Tabs": [\
-						(\
-							"TabId": "AssetEditorToolkit_Toolbar",\
-							"TabState": "OpenedTab"\
-						)\
-					]\
-				),\
-				(\
-					"SizeCoefficient": 1,\
-					"Type": "Stack",\
-					"HideTabWell": false,\
-					"ForegroundTab": "DefaultEditor",\
-					"Tabs": [\
-						(\
-							"TabId": "DefaultEditor",\
-							"TabState": "OpenedTab"\
-						)\
-					]\
-				)\
-			]\
-		)\
-	]\
-)
+Standalone_BlueprintDefaults_Layout_v6=( 	"Type": "Layout", 	"Name": "Standalone_BlueprintDefaults_Layout_v6", 	"PrimaryAreaIndex": 0, 	"Areas": [ 		( 			"SizeCoefficient": 1, 			"Type": "Area", 			"Orientation": "Orient_Vertical", 			"WindowPlacement": "Placement_NoWindow", 			"Nodes": [ 				( 					"SizeCoefficient": 0.20000000298023224, 					"Type": "Stack", 					"HideTabWell": true, 					"ForegroundTab": "AssetEditorToolkit_Toolbar", 					"Tabs": [ 						( 							"TabId": "AssetEditorToolkit_Toolbar", 							"TabState": "OpenedTab" 						) 					] 				), 				( 					"SizeCoefficient": 1, 					"Type": "Stack", 					"HideTabWell": false, 					"ForegroundTab": "DefaultEditor", 					"Tabs": [ 						( 							"TabId": "DefaultEditor", 							"TabState": "OpenedTab" 						) 					] 				) 			] 		) 	] )
 Standalone_StaticMeshEditor_Layout_v3=(\
 	"Type": "Layout",\
 	"Name": "Standalone_StaticMeshEditor_Layout_v3",\
@@ -752,7 +714,7 @@ Persona_AnimEditMode_Layout_v7=(\
 									"SizeCoefficient": 1,\
 									"Type": "Stack",\
 									"HideTabWell": false,\
-									"ForegroundTab": "None",\
+									"ForegroundTab": "Document : 0",\
 									"Tabs": [\
 										(\
 											"TabId": "Document",\
@@ -871,7 +833,7 @@ Persona_AnimBlueprintEditMode_Layout_v7=(\
 									"SizeCoefficient": 0.69999998807907104,\
 									"Type": "Stack",\
 									"HideTabWell": false,\
-									"ForegroundTab": "Document : 3",\
+									"ForegroundTab": "Document : 2",\
 									"Tabs": [\
 										(\
 											"TabId": "Document",\
@@ -922,11 +884,11 @@ Persona_AnimBlueprintEditMode_Layout_v7=(\
 									"SizeCoefficient": 0.20000000298023224,\
 									"Type": "Stack",\
 									"HideTabWell": false,\
-									"ForegroundTab": "None",\
+									"ForegroundTab": "CompilerResults",\
 									"Tabs": [\
 										(\
 											"TabId": "CompilerResults",\
-											"TabState": "ClosedTab"\
+											"TabState": "OpenedTab"\
 										),\
 										(\
 											"TabId": "FindResults",\
@@ -942,9 +904,10 @@ Persona_AnimBlueprintEditMode_Layout_v7=(\
 		)\
 	]\
 )
-Standalone_PhAT_Layout_v2=(\
+Standalone_PhAT_Layout_v2=( 	"Type": "Layout", 	"Name": "Standalone_PhAT_Layout_v2", 	"PrimaryAreaIndex": 0, 	"Areas": [ 		( 			"SizeCoefficient": 1, 			"Type": "Area", 			"Orientation": "Orient_Vertical", 			"WindowPlacement": "Placement_NoWindow", 			"Nodes": [ 				( 					"SizeCoefficient": 0.10000000149011612, 					"Type": "Stack", 					"HideTabWell": true, 					"ForegroundTab": "AssetEditorToolkit_Toolbar", 					"Tabs": [ 						( 							"TabId": "AssetEditorToolkit_Toolbar", 							"TabState": "OpenedTab" 						) 					] 				), 				( 					"SizeCoefficient": 0.89999997615814209, 					"Type": "Splitter", 					"Orientation": "Orient_Horizontal", 					"Nodes": [ 						( 							"SizeCoefficient": 0.80000001192092896, 							"Type": "Stack", 							"HideTabWell": false, 							"ForegroundTab": "PhAT_PreviewViewport", 							"Tabs": [ 								( 									"TabId": "PhAT_PreviewViewport", 									"TabState": "OpenedTab" 								) 							] 						), 						( 							"SizeCoefficient": 0.10000000149011612, 							"Type": "Stack", 							"HideTabWell": false, 							"ForegroundTab": "PhAT_Properties", 							"Tabs": [ 								( 									"TabId": "PhAT_Properties", 									"TabState": "OpenedTab" 								) 							] 						), 						( 							"SizeCoefficient": 0.10000000149011612, 							"Type": "Stack", 							"HideTabWell": false, 							"ForegroundTab": "PhAT_Hierarchy", 							"Tabs": [ 								( 									"TabId": "PhAT_Hierarchy", 									"TabState": "OpenedTab" 								) 							] 						) 					] 				) 			] 		) 	] )
+Standalone_UserDefinedEnumEditor_Layout_v1=(\
 	"Type": "Layout",\
-	"Name": "Standalone_PhAT_Layout_v2",\
+	"Name": "Standalone_UserDefinedEnumEditor_Layout_v1",\
 	"PrimaryAreaIndex": 0,\
 	"Areas": [\
 		(\
@@ -966,45 +929,14 @@ Standalone_PhAT_Layout_v2=(\
 					]\
 				),\
 				(\
-					"SizeCoefficient": 0.89999997615814209,\
-					"Type": "Splitter",\
-					"Orientation": "Orient_Horizontal",\
-					"Nodes": [\
+					"SizeCoefficient": 1,\
+					"Type": "Stack",\
+					"HideTabWell": false,\
+					"ForegroundTab": "UserDefinedEnum_EnumeratorEditor",\
+					"Tabs": [\
 						(\
-							"SizeCoefficient": 0.80000001192092896,\
-							"Type": "Stack",\
-							"HideTabWell": false,\
-							"ForegroundTab": "PhAT_PreviewViewport",\
-							"Tabs": [\
-								(\
-									"TabId": "PhAT_PreviewViewport",\
-									"TabState": "OpenedTab"\
-								)\
-							]\
-						),\
-						(\
-							"SizeCoefficient": 0.10000000149011612,\
-							"Type": "Stack",\
-							"HideTabWell": false,\
-							"ForegroundTab": "PhAT_Properties",\
-							"Tabs": [\
-								(\
-									"TabId": "PhAT_Properties",\
-									"TabState": "OpenedTab"\
-								)\
-							]\
-						),\
-						(\
-							"SizeCoefficient": 0.10000000149011612,\
-							"Type": "Stack",\
-							"HideTabWell": false,\
-							"ForegroundTab": "PhAT_Hierarchy",\
-							"Tabs": [\
-								(\
-									"TabId": "PhAT_Hierarchy",\
-									"TabState": "OpenedTab"\
-								)\
-							]\
+							"TabId": "UserDefinedEnum_EnumeratorEditor",\
+							"TabState": "OpenedTab"\
 						)\
 					]\
 				)\
